--- a/style.css
+++ b/style.css
@@ -19,5 +19,57 @@
     border: none;
     outline: none;
     scroll-behavior: smooth;
-    
+
+}
+
+html {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+}
+
+body {
+   background-color: var(--color-01);
+   color: var(--text-color);
+}
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 1.1rem;
+    background-color: var(--bg-color-01);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+
+.logo {
+font-size: 1.7rem;
+color: var(--text-color);
+font-weight: 600;
+cursor: default;
+}
+
+.nav-responsive {
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: 100%;
+    padding: 1rem;
+    background-color: rgb(0, 0, 0, 0.4);
+    flex-direction: column;
+}
+
+.nav a, .nav-responsive a {
+    font-size: 1.2rem;
+    color: var(--main-color);
+    padding: 0.5rem 1rem;
+    transition: 0.4;
+}
+
+.nav a:hover .nav-responsive a:hover {
+color: var(--main-color);
 }
