--- a/style.css
+++ b/style.css
@@ -127,3 +127,8 @@ section {
     text-align: center;
 }
 
+.services-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
