--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --text-color: #ffffff;
     --bg-color-01: #1f242d;
     --bg-color-02: #323946;
-    --color-00: #0000001a;
+    --color-00: #ff00001a;
     --color-01: #999999;
     --color-02: #009539;
     --color-03: #7950f2;
@@ -98,7 +98,7 @@ section {
 }
 
 .home-img img, .about-img img {
-    width: 70%;
+    width: 100%;
 }
 
 .about {
@@ -173,3 +173,47 @@ section {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.portfolio {
+    background-color: var(--bg-color-02);
+}
+
+.portfolio-container {
+    display: grid;
+    gap: 1.2rem;
+}
+
+.portifolio-box {
+    position: relative;
+    border-radius: 0.6rem;
+    box-shadow: 0 0 0.6rem var(--bg-color-01);
+    overflow: hidden;
+    display: flex;
+}
+
+.portifolio-box img {
+    width: 100%;
+    transition: 0.5s ease;
+}
+
+.portifolio-box img:hover {
+    transform: scale(1.1);
+}
+
+.portifolio-box .portfolio-layer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(transparent, var(--main-color));
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 0 4rem;
+    transform: translateY(30rem);
+    transition: 0.5s ease;
+}
+
