--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --text-color: #ffffff;
     --bg-color-01: #1f242d;
     --bg-color-02: #323946;
-    --color-00: #ff00001a;
+    --color-00: #0000001a;
     --color-01: #999999;
     --color-02: #009539;
     --color-03: #7950f2;
@@ -109,17 +109,22 @@ section {
     width: 45%;
 }
 
-.home-content h2, .about-content h1{
+.home-content h1, .about-content h1 {
     font-weight: 700;
-    line-height: 1.6rem;
-} 
+    line-height: 1.3;
+}
 
-.home-content p, .about-content p{
+.home-content h3, .about-content h3 {
+    font-weight: 700;
+    font-size: 1.6rem;
+}
+
+.home-content p, .about-content p {
     margin-top: 1.2rem;
     text-align: justify;
 }
 
-.services h2,
+.services h2, 
 .portfolio h2,
 .contact h2 {
     font-size: 2.2rem;
@@ -145,7 +150,7 @@ section {
     padding: 2rem 1rem 2.5rem;
     border-radius: 1.2rem;
     text-align: center;
-    border: solid 0.5rem var(--bg-color-01);
+    border: solid 0.15rem var(--bg-color-01);
     background-color: var(--bg-color-02);
     transition: 0.5s ease;
 }
@@ -153,11 +158,11 @@ section {
 .services-container .services-box:hover {
     border-color: var(--main-color);
     transform: scale(1.01);
- }
+}
 
- .services-box i {
+.services-box i {
     font-size: 4.3rem;
-   color: var(--main-color);
+    color: var(--main-color);
 }
 
 .services-box h3 {
@@ -168,7 +173,7 @@ section {
     margin: 0.5rem;
     letter-spacing: 0.1rem;
     display: -webkit-box;
-    -webkit-line-clamp: 4;
+    -webkit-line-clamp-: 4;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -183,7 +188,7 @@ section {
     gap: 1.2rem;
 }
 
-.portifolio-box {
+.portfolio-box {
     position: relative;
     border-radius: 0.6rem;
     box-shadow: 0 0 0.6rem var(--bg-color-01);
@@ -191,16 +196,16 @@ section {
     display: flex;
 }
 
-.portifolio-box img {
+.portfolio-box img {
     width: 100%;
     transition: 0.5s ease;
 }
 
-.portifolio-box img:hover {
+.portfolio-box img:hover {
     transform: scale(1.1);
 }
 
-.portifolio-box .portfolio-layer{
+.portfolio-box .portfolio-layer {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -217,3 +222,107 @@ section {
     transition: 0.5s ease;
 }
 
+.portfolio-box:hover .portfolio-layer {
+    transform: translateY(0);
+}
+
+.portfolio-layer h4 {
+    font-size: 1.8rem;
+}
+
+.portfolio-layer p{
+    margin: 0.2rem 0 0.5rem;
+}
+
+.portfolio-layer a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 3rem;
+    height: 3rem;
+    background: var(--text-color);
+    border-radius: 50%;
+}
+
+.portfolio-layer a i {
+    font-size: 1.2rem;
+    color: var(--bg-color-02);
+}
+
+form {
+    max-width: 45rem;
+    margin: 0.6rem auto;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+form .input-box {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+form .input-box input, form textarea {
+    width: 100%;
+    padding: 1rem;
+    font-size: 1rem;
+    color: var(--text-color);
+    background-color: var(--bg-color-02);
+    border-radius: 0.5rem;
+    margin: 0.4rem 0;
+}
+
+form textarea {
+    resize: none;
+}
+
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 1.2rem;
+    background-color: var(--bg-color-01);
+}
+
+.social-media img {
+    width: 3.5rem;
+}
+
+.social-media a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 2.5rem;
+    background: transparent;
+    border: solid 0.15rem var(--main-color);
+    margin: 1.8rem 0.5rem;
+    transition: 0.5s ease;
+}
+
+.social-media a:hover {
+    background-color: var(--main-color);
+    color: var(--bg-color-02);
+    box-shadow: 0 0 0.3rem var(--main-color)
+}
+
+/* BUTTON */
+
+.btn {
+    display: inline-block;
+    padding: 0.7rem 1.8rem;
+    background-color: var(--main-color);
+    border-radius: 2rem;
+    color: var(--bg-color-02);
+    font-weight: 600;
+    letter-spacing: 0.1rem;
+    transition: 0.3s ease;
+    margin-top: 1.2rem;
+}
+
+.bnt:hover {
+    box-shadow: 0 0 0.3rem var(--main-color);
+    background-color: inherit;
+    color: var(--main-color);
+    cursor: pointer;
+}
