--- a/style.css
+++ b/style.css
@@ -303,10 +303,10 @@ footer {
 .social-media a:hover {
     background-color: var(--main-color);
     color: var(--bg-color-02);
-    box-shadow: 0 0 0.3rem var(--main-color)
+    box-shadow: 0 0 0.3rem var(--main-color);
 }
 
-/* BUTTON */
+/* Button */
 
 .btn {
     display: inline-block;
@@ -320,17 +320,19 @@ footer {
     margin-top: 1.2rem;
 }
 
-.bnt:hover {
+.btn:hover {
     box-shadow: 0 0 0.3rem var(--main-color);
     background-color: inherit;
     color: var(--main-color);
     cursor: pointer;
 }
 
-.menu-hamburger{
+/* menu hamburguer */
+
+.menu-hamburguer {
     display: none;
-   cursor: pointer;
-   z-index: 101;
+    cursor: pointer;
+    z-index: 101;
 }
 
 .nav-responsive.active {
@@ -338,12 +340,12 @@ footer {
     right: 0;
 }
 
-.bar1, .bar2, .bar3{
+.bar1, .bar2, .bar3 {
     width: 2rem;
     height: 0.3rem;
-    background-color: var(--text-color);
+    background-color:var(--text-color);
     margin: 0.4rem 0;
-    transition: 0.3s ease;
+    transition: 0.3s ease;   
 }
 
 .change .bar1 {
@@ -354,21 +356,22 @@ footer {
     opacity: 0;
 }
 
-.change .bar3 {
-   transform: translate(0, -0.65rem) rotate(45deg);
+.change .bar3{
+    transform: translate(0, -0.65rem) rotate(45deg);
 }
 
-/* fim menu */
+/* fim menu amburguer */
 
-/* responsividade */
+/* media queries (responsividade) */
 
-/* extra small */
+/* extra small - smartphone */
 
-@media (min-width:0px) {
+@media (min-width: 0px) {
 
-.menu-hamburger {
+.menu-hamburguer {
     display: block;
 }
+
 .nav {
     display: none;
 }
@@ -394,14 +397,14 @@ section {
 }
 
 .home-content, .about-content {
-    width: 100%;   
+    width: 100%;
 }
 
 .home-content div {
     text-align: center;
 }
 
-.home-content, .about-content h1 {
+.home-content h1, .about-content h1 {
     font-size: 2.2rem;
     font-weight: 700;
     line-height: 1.3;
@@ -417,3 +420,83 @@ section {
 }
 
 }
+
+@media (min-width: 576px) {
+
+    .home-img, .about-img {
+        width: 65%;
+        max-width: 65%;
+    }
+
+    .services-box {
+        width: 70%;
+    }
+
+    }
+
+@media (min-width:768px) {
+
+        .menu-hamburguer {
+            display: none;
+    
+        }
+
+        .nav {
+            display: block;
+        }
+
+        .nav-responsive, .nav-responsive a {
+            display: none;
+        }
+
+        .home, .about {
+            flex-direction: row;
+            justify-content: space-evenly;
+        }
+
+        .home-img, .about-img {
+            max-width: 35%;
+        }
+
+        .home-content, .about-content {
+            width: 50%;
+        }
+
+        .services-box{
+            width: 60%;
+            margin-bottom: 2rem;
+        }
+
+        .portfolio-container {
+            grid-template-columns: auto auto;
+        }
+
+        form .input-box input {
+            width: 49%;
+        }
+
+    }
+
+@media (min-width: 992px) {
+        .services-container {
+            flex-direction: row;
+            gap: 1.2rem;
+        }
+    }
+
+@media (min-width: 1200px) {
+    .home-img, .about-img {
+        max-width: 25%;
+    }
+
+    .home-content h1 {
+        font-size: 2.7rem;
+    }
+
+    .home-content h3 {
+        font-size: 2rem;
+    }
+    .portfolio-container {
+        grid-template-columns: auto auto auto;
+    }
+    }
